[tool.poetry]
package-mode = false
name = "playwright-project"
version = "0.1.0"
description = "A Playwright test project"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
pytest-playwright = "^0.4.0"
arguably = "^1.3.0"
flask = "^2.3.0"
waitress = "^2.1.2"

[tool.poetry.group.dev.dependencies]
playwright = "1.51.0"

[tool.poetry.scripts]
playwright-tool = "src.main:main"
serve = "src.server:serve"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"